--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "version": "0.0.1",
     "main": "index.js",
     "scripts": {
+        "start": "node index.js",
         "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
-        "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
+        "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+        "server": "nodemon index.js"
     },
     "repository": {
         "type": "git",
@@ -21,6 +23,7 @@
         "eslint": "8.14.0",
         "jest": "28.1.0",
         "knex-cleaner": "1.3.1",
+        "nodemon": "^2.0.19",
         "supertest": "6.2.3"
     },
     "license": "ISC"
